# burn-onnx

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT-GUIDE.md  README.md  SIMPLIFIER-TODO.md  SUPPORTED-ONNX-OPS.md  _typos.toml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: bump-burn.yml  test.yml
crates/burn-import/: Cargo.toml
crates/burn-onnx/: Cargo.toml  README.md
crates/burn-onnx/src/: model_gen.rs
crates/model-checks/: .gitignore  README.md
crates/model-checks/albert/: Cargo.toml  build.rs  get_model.py
crates/model-checks/all-minilm-l6-v2/: Cargo.toml  build.rs  get_model.py
crates/model-checks/clip-vit-b-32-text/: Cargo.toml  build.rs  get_model.py
crates/model-checks/clip-vit-b-32-text/src/: main.rs
crates/model-checks/clip-vit-b-32-vision/: Cargo.toml  build.rs  get_model.py
crates/model-checks/depth-anything-v2/: Cargo.toml  build.rs  get_model.py
crates/model-checks/mediapipe-face-detector/: Cargo.toml  README.md  build.rs  get_model.py
crates/model-checks/silero-vad/: Cargo.toml  build.rs  get_model.py  validate_model.py
crates/model-checks/silero-vad/src/: main.rs
crates/onnx-ir/: Cargo.toml  README.md
crates/onnx-ir-derive/: README.md
crates/onnx-tests/: build.rs
examples/raspberry-pi-pico/: Cargo.toml
onnx-spec/: fetch-specs.py
onnx-spec/ops/: Abs.md  Acos.md  Acosh.md  Add.md  AffineGrid.md  And.md  ArgMax.md  ArgMin.md  Asin.md  Asinh.md  Atan.md  Atanh.md  Attention.md  AveragePool.md  BatchNormalization.md  Bernoulli.md  BitShift.md  BitwiseAnd.md  BitwiseNot.md  BitwiseOr.md  BitwiseXor.md  BlackmanWindow.md  Cast.md  CastLike.md  Ceil.md  Celu.md  CenterCropPad.md  Clip.md  Col2Im.md  Compress.md  Concat.md  ConcatFromSequence.md  Constant.md  ConstantOfShape.md  Conv.md  ConvInteger.md  ConvTranspose.md  Cos.md  Cosh.md  CumSum.md  (+158 more)
xtask/src/: model_check.rs
(+201 files in other folders)
