[package]
name = "burn-onnx-model-checks-clip-vit-b-32-text"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[workspace.dependencies]
burn = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "502910e2a77f61b9ceb3eac36e26920ab2e38c66" }
burn-store = { git = "https://github.com/tracel-ai/burn", default-features = false, rev = "502910e2a77f61b9ceb3eac36e26920ab2e38c66" }

[features]
default = ["ndarray"]
ndarray = ["burn/ndarray"]
tch = ["burn/tch"]
wgpu = ["burn/wgpu"]
metal = ["burn/metal"]

[dependencies]
burn = { workspace = true }
burn-store = { workspace = true, features = ["std", "burnpack", "pytorch"] }
model-checks-common = { path = "../common" }

[build-dependencies]
burn-onnx = { path = "../../burn-onnx" }
model-checks-common = { path = "../common" }
